**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 1.0.15 beta
------------------------
  - Enhancement  #225 Improved sorting of movies (by IMdB rating and by year)
  - Enhancement  #254 Use XBMC tvshow nfo layout to override scraper info
  - Enhancement  #343 Allowing prebuf to be set
  - Fixed defect #352 Fanart not being resized
  - Fixed defect #353 Some of the html files are not getting copied from the temp dir to the jukebox dir
  - Fixed defect #354 Jukebox clean-up doesn't handle files with no extension cleanly
  - Fixed defect #356 ForceFanartOverwrite setting doesn't work
  - Fixed defect #359 Allow either Series url or Season url in NFO for TheTVDB
  - Fixed defect #361 TV Shows with new episodes do not show in the YAMJ "new" html output
  - Fixed defect #362 Genres.xml has un-necessary entries
  - Enhancement  #365 Updated Stratim plugin:
                        1) Support for NFO with sratim.co.il URL in it
                        2) High resolution Hebrew posters form sub-baba.com
                        3) Complete missing data with data from IMDB or TVDB
  - Fixed defect #366 When the NFO changes force download/update of content


MovieJukebox 1.0.14 beta
------------------------
  - Fixed defect  #85 Exception thrown when IMPAwards image not found
  - Enhancement   #91 Ordered by IMDB-Ranking
  - Enhancement  #100 New field on details page with a name specified in the libraries.xml to seperate different USB devices
  - Enhancement  #112 Support for BD-50 Dual-Layer Disc rips
  - Enhancement  #128 Better detection of TV series air dates.
  - Enhancement  #148 Enh: Get Metadata from tags
  - Fixed defect #196 Focus on alphabets or categories resets to 09 every time you press return on remote.
  - Enhancement  #197 Latest X movies in Y days
  - Enhancement  #214 Support for local fanart files